# music_tools

./: .gitignore  .mypy.ini  example.json  index.html  main.py  note.py  pyproject.toml  scale.py
scripts/: playground.py
src/music_tools/: algorithms.py  chord.py  guitar.py  mode.py  note.py  pitch.py  scale.py
test/: test_algorithms.py  test_chord.py  test_guitar.py  test_mode.py  test_note.py  test_scale.py
